update - 更新简历样式实现.

--- a/src/components/Resume.less
+++ b/src/components/Resume.less
@@ -1,1 +1,16 @@
+.cv-main{
+  width: 1100px;  // 打印考虑
+  margin: auto;
+  margin-top: 15px;
+  background: #f8fcfb;
+}
+
+.cv-fix-height {
+  padding: 5px 0px 5px !important;  // !important 是保证该条样式不被覆盖
+}
+
+.cv-fix-content-item {
+  padding-left: 8px !important;
+}
+
 
