--- a/src/components/Resume.less
+++ b/src/components/Resume.less
@@ -1,16 +1,23 @@
-.cv-main{
-  width: 1100px;  // 打印考虑
+.cv-main {
+  width: 1100px; // 打印考虑
   margin: auto;
   margin-top: 15px;
   background: #f8fcfb;
 }
 
 .cv-fix-height {
-  padding: 5px 0px 5px !important;  // !important 是保证该条样式不被覆盖
+  padding: 5px 0px 5px !important; // !important 是保证该条样式不被覆盖
 }
 
-.cv-fix-content-item {
+// 条目缩进:
+.cv-fix-content-tab4 {
+  padding-left: 4px !important;
+}
+
+.cv-fix-content-tab8 {
   padding-left: 8px !important;
 }
 
-
+.cv-fix-content-tab16 {
+  padding-left: 16px !important;
+}
