update: UI style.

--- a/src/components/Resume.less
+++ b/src/components/Resume.less
@@ -6,18 +6,26 @@
 }
 
 .cv-fix-height {
-  padding: 5px 0px 5px !important; // !important 是保证该条样式不被覆盖
+  padding: 2px 0px 2px !important; // !important 是保证该条样式不被覆盖
 }
 
 // 条目缩进:
 .cv-fix-content-tab4 {
   padding-left: 4px !important;
+  margin: auto; // 调整行间距
 }
 
+// 缩进:
 .cv-fix-content-tab8 {
-  padding-left: 8px !important;
+  padding-left: 16px !important; // 调整缩进
+  padding-top: 2px; // 调整行间距
 }
 
 .cv-fix-content-tab16 {
   padding-left: 16px !important;
+}
+
+// 个人项目:
+.cv-fix-content-height {
+  padding: 0px; // 调整行间距
 }
