--- a/src/components/Resume.less
+++ b/src/components/Resume.less
@@ -1,12 +1,12 @@
 .cv-main {
-  width: 1100px; // 打印考虑
+  width: 840px; // 打印考虑
   margin: auto;
-  margin-top: 15px;
   background: #f8fcfb;
 }
 
-.cv-fix-height {
-  padding: 2px 0px 2px !important; // !important 是保证该条样式不被覆盖
+// 分页:
+.cv-page-break {
+  page-break-after: always;
 }
 
 // 条目缩进:
@@ -25,7 +25,25 @@
   padding-left: 16px !important;
 }
 
-// 个人项目:
-.cv-fix-content-height {
-  padding: 0px; // 调整行间距
+// 表格样式调整:
+.cv-table {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 3px;
+
+  tbody{
+    tr {
+      td {
+        padding: 4px 2px;
+      }
+    }
+  }
+
+  //tbody tr td {
+  //  padding: 4px 2px;
+  //}
+}
+
+.cv-tb-job {
+  .cv-table;
 }
