update - CSS: 去除表格边框线.

--- a/src/components/Resume.less
+++ b/src/components/Resume.less
@@ -31,9 +31,12 @@
   margin-bottom: 0px;
   padding-top: 3px;
 
+  border: 0px; // 去除表格竖边线
+
   tbody{
     tr {
       td {
+        border: 0px; // 去除表格, 单元格横边线
         padding: 4px 2px;
       }
     }
